--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ license = "GPLv3"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "2.33.3"
+clap = { version = "3.0.1", features = [ "cargo" ] }
